Updated to Java 21, using virtual threads in executor service.